--- a/.config
+++ b/.config
@@ -817,11 +817,8 @@ CONFIG_POSTFIX_LDAP=y
 CONFIG_POSTFIX_CDB=y
 CONFIG_POSTFIX_SQLITE=y
 CONFIG_POSTFIX_PCRE=y
-CONFIG_PACKAGE_rclone-ng=m
-CONFIG_PACKAGE_rclone-webui-react=m
-CONFIG_PACKAGE_curl=m
+CONFIG_PACKAGE_curl=y
 CONFIG_PACKAGE_wget=y
-CONFIG_PACKAGE_ksmbd-server=m
 CONFIG_PACKAGE_iptables=y
 CONFIG_PACKAGE_iptables-mod-conntrack-extra=m
 CONFIG_PACKAGE_iptables-mod-fullconenat=y
@@ -874,7 +871,6 @@ CONFIG_PACKAGE_uclient-fetch=y
 CONFIG_PACKAGE_vlmcsd=y
 CONFIG_PACKAGE_wol=y
 CONFIG_PACKAGE_blkid=m
-CONFIG_PACKAGE_hd-idle=m
 CONFIG_PACKAGE_parted=m
 CONFIG_PACKAGE_antfs-mount=y
 CONFIG_PACKAGE_e2fsprogs=m
@@ -887,7 +883,6 @@ CONFIG_PACKAGE_coreutils-nohup=y
 CONFIG_PACKAGE_jshn=y
 CONFIG_PACKAGE_libjson-script=y
 CONFIG_PACKAGE_openssl-util=y
-CONFIG_PACKAGE_rclone=m
 CONFIG_PACKAGE_shellsync=y
 CONFIG_PACKAGE_smartmontools=m
 CONFIG_STRACE_NONE=y
