--- a/.github/workflows/build-lede.yml
+++ b/.github/workflows/build-lede.yml
@@ -29,8 +29,8 @@ env:
   REPO_BRANCH: master
   FEEDS_CONF: feeds.conf.default
   CONFIG_FILE: config.build
-  DIY_P1_SH: diy-build-part1.sh
-  DIY_P2_SH: diy-build-part2.sh
+  DIY_P1_SH: diy-part1.sh
+  DIY_P2_SH: diy-part2.sh
   SSH_ACTIONS: false
   UPLOAD_BIN_DIR: false
   UPLOAD_FIRMWARE: true
